--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
         <h1 style = “font-size: 45px;”> Amanda Lovegrove </h1>
 
-        <p> <img src="me.JPG" width = “200” height = “40”> </p>
+        <p> <img src="me.jpg" width = “200” height = “40”> </p>
 
         <p>I grew up in Darien, Connecticut.
         <br> I enjoy all things tech and my professional role model is Elon Musk.
